--- a/todo app/todo.css
+++ b/todo app/todo.css
@@ -30,7 +30,7 @@ h1{background-color: black;
 }
 
 .container{
-    background-image: url("./flat-lay-office-desk-assortment-with-copy-space.jpg");
+      background-color: #b58773;
    
     height: 60rem;
     width: 60rem;
